--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,8 @@ features = ["keccak"]
 [dependencies.pyo3]
 version = "0.20.2"
 features = ["extension-module", "num-bigint"]
+
+[dependencies.rug]
+version = "1.24.0"
+default-features = false
+features = ["integer", "num-traits"]
