--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ hex = "0.4.3"
 num-bigint = "*"
 num-traits = "0.2.18"
 once_cell = "1.19.0"
+rayon = "1.8.1"
 
 [dependencies.tiny-keccak]
 version = "2.0.2"
