--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -28,7 +28,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: '3.11'
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
@@ -45,7 +45,7 @@ jobs:
         if: ${{ startsWith(matrix.target, 'x86_64') }}
         shell: bash
         run: |
-          set -e
+          set -ex
           pip install snarkpy --find-links dist --force-reinstall
           pip install pytest
           pytest
