--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -1,11 +1,14 @@
 name: docker
 
 on:
-  push:
+  workflow_run:
+    workflows: ["CI"]
     branches:
       - main
     tags:
       - '*'
+    types:
+      - completed
 
 env:
   REGISTRY: ghcr.io
